# prism

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-11-plugin-system.md
docs/superpowers/specs/: 2026-03-11-plugin-system-design.md
plugins/backlinks/: init.lua  plugin.toml
plugins/outline/: init.lua  plugin.toml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  theme.rs  watcher.rs
src-tauri/src/commands/: clipboard.rs  config.rs  editor.rs  favorites.rs  files.rs  frecency.rs  graph.rs  images.rs  logger.rs  mod.rs  plugins.rs  search.rs  tags.rs  theme.rs
src-tauri/src/plugins/: events.rs  lua_runtime.rs  manager.rs  mod.rs  protocol.rs
src/components/: animated-overlay.tsx  command-palette.tsx  content-skeleton.tsx  header.tsx  link-graph.tsx  new-file-dialog.tsx  plugin-overlay.tsx  plugin-panel.tsx  prism-provider.tsx  quick-capture.tsx  reader-provider.tsx  rename-dialog.tsx  sidebar-panel.tsx  status-bar.tsx  tag-filter.tsx  template-picker.tsx  theme-picker.tsx  toast.tsx  which-key.tsx
src/hooks/: use-shortcuts.ts  use-theme.ts  use-vault.ts  use-vim-mode.ts
src/lib/: logger.ts  plugin-loader.ts  reader-state.ts  rehype-source-lines.ts  remark-wiki-links.ts  tauri.ts  types.ts
src/routes/: __root.tsx  index.tsx
test-plugins/ascii-clock/: init.lua  plugin.toml
test-plugins/hello-world/: init.lua  plugin.toml
(+14 files in other folders)
