[package]
name = "prism"
version = "0.7.0"
description = "A keyboard-driven markdown vault reader"
authors = ["thesandybridge"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
shellexpand = "3"
notify = "8"
nucleo-matcher = "0.3"
tokio = { version = "1", features = ["process"] }
tauri-plugin-global-shortcut = "2"
regex = "1"
base64 = "0.22"
chrono = "0.4"
tauri-plugin-dialog = "2.6.0"
mlua = { version = "0.10", features = ["lua54", "serialize", "send", "vendored"] }
env_logger = "0.11"
log = "0.4"
colored = "2"

